--- a/templates/admin.html
+++ b/templates/admin.html
@@ -16,6 +16,11 @@
     <li><a href="../admin/?apikey={{key}}">Admin</a></li>
     <li><a href="../package/?apikey={{key}}">Packages</a></li>
     <li><a href="../moderate/?apikey={{key}}">Moderate</a></li>
+    <li><a class="internal_link" href="#package-listing">Packages</a></li>
+    <li><a class="internal_link" href="#media-listing">Medias</a></li>
+    <li><a class="internal_link" href="#annotationtypelisting">Types</a></li>
+    <li><a class="internal_link" href="#apikey-listing">Keys</a></li>
+    <li><a class="internal_link" href="#annotation-listing">Annotations</a></li>
   </ul>
 </nav>
 </header>
