--- a/templates/moderate.html
+++ b/templates/moderate.html
@@ -30,6 +30,7 @@
 
 <script type="text/javascript" src="../static/underscore.js"></script>
 <script type="text/javascript" src="../static/jquery.min.js"></script>
+<script type="text/javascript" src="../static/notify.min.js"></script>
 <script type="text/javascript" src="../static/jquery.restAdmin.js"></script>
 <script type="text/javascript" src="../static/jquery.dataTables.min.js"></script>
 <script type="text/javascript">
