--- a/static/metaserver.css
+++ b/static/metaserver.css
@@ -10,8 +10,10 @@ header {
     margin: 0px;
     padding: 0px;
     top: 0px;
-    width: 100%;
+    left: 0px;
+    right: 0px;
     height: 2em;
+    z-index: 10;
     background-color: #999;
 }
 header a {
