--- a/static/metaserver.css
+++ b/static/metaserver.css
@@ -46,3 +46,14 @@ nav .internal_link {
 h1:first-child {
     margin-top: 2em;
 }
+.btn.btn-mini {
+  border: 1px solid #888;
+  color: #FFF;
+  background-color: #888;
+  outline: none;
+  text-decoration: none;
+  border-radius: 2px;
+}
+.btn.btn-mini:hover {
+  box-shadow: #777 1px 1px 1px;
+}
