--- a/templates/moderate.html
+++ b/templates/moderate.html
@@ -9,6 +9,14 @@
   </style>
 </head>
 <body>
+<header>
+<nav>
+  <ul>
+    <li><a href="../?apikey={{key}}">Index</a></li>
+  </ul>
+  <div class="loginmenu"><a id="apikey" href="login">No API key</a></div>
+</nav>
+</header>
   <h1>Medias</h1>
   <table id="mediainfo">
     <thead>
@@ -30,6 +38,7 @@
 
 <script type="text/javascript" src="../static/underscore.js"></script>
 <script type="text/javascript" src="../static/jquery.min.js"></script>
+<script type="text/javascript" src="../static/metaserver.js"></script>
 <script type="text/javascript" src="../static/notify.min.js"></script>
 <script type="text/javascript" src="../static/jquery.restAdmin.js"></script>
 <script type="text/javascript" src="../static/jquery.dataTables.min.js"></script>
@@ -48,6 +57,7 @@
 
         $('#annotation-listing').restAdmin({
             url: '../api/annotation?apikey={{key}}{% if filter %}&filter={{ filter }}{%endif%}',
+            ajaxheaders: get_ajax_headers(),
             schema: [
                 {
                     name: "id",
